--- a/src/GUI/index/index.css
+++ b/src/GUI/index/index.css
@@ -15,8 +15,17 @@ div.header-row{
 }
 
 div.breathe-left{
-  margin-left: 5vw;
+  margin-left: 8vw;
 }
+
+div.breathe-top{
+  margin-top: 0.6vh;
+}
+
+div.bigbreathe-left{
+  margin-left: 10vw;
+}
+
 
 /* Buttons */
 button.btnDropdown {
@@ -24,6 +33,26 @@ button.btnDropdown {
   border-color: #707070;
 
   transform: scale(1.3);
+
+  padding: 1vh 2.2vw;
   /* Text Color */
   /* color: #EBEBEB */
+}
+
+button.btnAdd {
+  background-color: #4EA957;
+  border-color: #707070;
+
+  transform: scale(1.3);
+
+  padding: 1vh 2.2vw;
+}
+
+/* Input */
+input.darkInput{
+  background-color: #3B3B3B;
+  border-color: #707070;
+
+  /* Text Color */
+  color: #C7C7C7;
 }
