--- a/src/GUI/index/index.css
+++ b/src/GUI/index/index.css
@@ -56,3 +56,41 @@ input.darkInput{
   /* Text Color */
   color: #C7C7C7;
 }
+
+
+/* Query Details Display */
+ul#queryDisplay {
+  list-style-type: none;
+}
+
+li.floatLeft {
+  float:left;
+  margin-left: 0.3vw;
+}
+
+li.queryDisplay {
+  padding: 0.5vh 1vw;
+
+  border-radius: 3px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #b7b7b7;
+
+  background-color: #28d139;
+  opacity: 75%;
+
+  color: #202020;
+  font-family: 'Segoe UI';
+  font-weight: bold;
+}
+
+/* Style the close button (span) */
+span.queryClose {
+  cursor: pointer;
+  /* padding: 3px 4px; */
+  margin-left: 2vw;
+  margin-right: 0vw;
+  color:#101010;
+}
+
+span.queryClose:hover {color: #000000;}
