--- a/src/GUI/index/index.css
+++ b/src/GUI/index/index.css
@@ -75,27 +75,32 @@ li.queryDisplay {
   padding: 0.5vh 1vw;
 
   border-radius: 3px;
-  border-width: 2px;
+  border-width: 1px;
   border-style: solid;
-  border-color: #b7b7b7;
+  border-color: #2f2f2f;
 
-  opacity: 75%;
+  /* color: #ffffff; */
 
-  color: #202020;
   font-family: 'Segoe UI';
   font-weight: bold;
 }
 
 li.fillGreen{
-  background-color: #28d139;
+  background-color: #0ed74057;
+  color: #0ED740;
+  border-color: #0ED740;
 }
 
-li.fillPink{
-  background-color: #ffc0cb;
+li.fillGold{
+  background-color: #FBD01457;
+  color: #FBD014;
+  border-color: #FBD014;
 }
 
 li.fillBlue{
-  background-color: #87cefa;
+  background-color: #1389d757;
+  color: #1389d7;
+  border-color: #1389d7;
 }
 
 /* Absolute Positioning */
@@ -112,7 +117,6 @@ span.queryClose {
   /* padding: 3px 4px; */
   margin-left: 2vw;
   margin-right: 0vw;
-  color:#101010;
 }
 
 span.queryClose:hover {color: #000000;}
