--- a/src/GUI/index/index.css
+++ b/src/GUI/index/index.css
@@ -226,6 +226,13 @@ div.ic2{
   border-style: solid;
 }
 
+div.ic3{
+  background-color: #0f69a557;
+  border-radius: 5px;
+  border-color: #0f69a5;
+  border-style: solid;
+}
+
 
 h2.ic0{
   color: #b40d95;
@@ -239,6 +246,10 @@ h2.ic2{
   color: #D93F0B;
 }
 
+h2.ic3{
+  color: #0f69a5;
+}
+
 h6.ic0{
   color: #b40d95;
 }
@@ -249,4 +260,8 @@ h6.ic1{
 
 h6.ic2{
   color: #D93F0B;
+}
+
+h6.ic3{
+  color: #0f69a5;
 }
