--- a/src/GUI/index/index.css
+++ b/src/GUI/index/index.css
@@ -233,6 +233,12 @@ div.ic3{
   border-style: solid;
 }
 
+div.ic4{
+  background-color: #eeeeee57;
+  border-radius: 5px;
+  border-color: #eeeeee;
+  border-style: solid;
+}
 
 h2.ic0{
   color: #b40d95;
@@ -250,6 +256,10 @@ h2.ic3{
   color: #0f69a5;
 }
 
+h2.ic4{
+  color: #eeeeee;
+}
+
 h6.ic0{
   color: #b40d95;
 }
@@ -264,4 +274,8 @@ h6.ic2{
 
 h6.ic3{
   color: #0f69a5;
+}
+
+h6.ic4{
+  color: #eeeeee;
 }
