--- a/src/GUI/newMenu/newMenu.css
+++ b/src/GUI/newMenu/newMenu.css
@@ -68,3 +68,16 @@ button.btnDropdown {
   
     padding: 1vh 2.2vw;
   }
+
+  .inputText{
+    color: #202020;
+  }
+
+  img.one {
+    height: 200;
+    width: 200;
+    margin-left: 140px;
+    position: absolute; top: 1px; left: 1; width: 200px; height: 200px;
+  }
+
+  
